--- a/client/scss/Widgets/MetaEditor/MetaEditorWidget.scss
+++ b/client/scss/Widgets/MetaEditor/MetaEditorWidget.scss
@@ -100,6 +100,7 @@ div.filterPanel {
 		ul.nav {
 			position: relative;
 			margin-bottom: 0px;
+            height: 24px;
 
 			&.nav-tabs {
 				> li {
@@ -121,7 +122,7 @@ div.filterPanel {
 
                         [class^="icon-"],
                         [class*=" icon-"] {
-                          margin-top: -1px;
+                          margin-top: -2px;
                           margin-left: 2px;
                           cursor: pointer;
                           display: none;
