--- a/client/scss/Widgets/MetaEditor/MetaEditorWidget.scss
+++ b/client/scss/Widgets/MetaEditor/MetaEditorWidget.scss
@@ -93,6 +93,20 @@ div.filterPanel {
 		}
 	}
 
+    div.add-sheet-container {
+      ul.dropdown-menu {
+        li {
+          a {
+            [class^="icon-"],
+            [class*=" icon-"] {
+              margin-left: -17px;
+              margin-right: 3px;
+            }
+          }
+        }
+      }
+    }
+
 	div.sheet-list-container {
 		width: 100%;
 		overflow: hidden;
