in read-only panel don't show the delete icons on the tabs

--- a/client/scss/Widgets/MetaEditor/MetaEditorWidget.scss
+++ b/client/scss/Widgets/MetaEditor/MetaEditorWidget.scss
@@ -171,3 +171,24 @@ div.filterPanel {
 		}
 	}
 }
+
+.read-only {
+  .sheets-container {
+    div.sheet-list-container {
+      ul.nav {
+        &.nav-tabs {
+          > li {
+            &.active {
+              > a {
+                [class^="icon-"],
+                [class*=" icon-"] {
+                  display: none;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
