--- a/client/css/Widgets/MetaEditor/MetaEditorWidget.css
+++ b/client/css/Widgets/MetaEditor/MetaEditorWidget.css
@@ -94,3 +94,7 @@ div.filterPanel {
       .sheets-container div.sheet-list-container ul.nav.nav-tabs.ui-sortable li.ui-sortable-helper {
         top: 0px !important;
         pointer-events: none; }
+
+.read-only .sheets-container div.sheet-list-container ul.nav.nav-tabs > li.active > a [class^="icon-"],
+.read-only .sheets-container div.sheet-list-container ul.nav.nav-tabs > li.active > a [class*=" icon-"] {
+  display: none; }
