--- a/client/css/Widgets/MetaEditor/MetaEditorWidget.css
+++ b/client/css/Widgets/MetaEditor/MetaEditorWidget.css
@@ -1,100 +1,65 @@
-div.filterPanel {
-  position: absolute;
-  top: 34px;
-  right: 11px;
-  background-color: white;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
-  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  -webkit-background-clip: padding-box;
-  -moz-background-clip: padding;
-  background-clip: padding-box; }
-  div.filterPanel .header {
-    min-width: 100px;
-    text-align: center;
-    margin: 0 5px; }
-  div.filterPanel .body {
-    display: none;
-    list-style: none;
-    padding: 5px;
-    margin: 0; }
-    div.filterPanel .body li.filterItem {
-      margin: 3px 0; }
-      div.filterPanel .body li.filterItem .iCheckBox {
-        float: right;
-        margin-top: 6px;
-        margin-left: 3px; }
-      div.filterPanel .body li.filterItem div > svg {
-        margin-top: 4px; }
-  div.filterPanel:hover .header {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
-  div.filterPanel:hover .body {
-    display: block; }
+/*
+Syntax error: Undefined variable: "$sheets-container-height".
+        on line 10 of ../scss/Widgets/MetaEditor/MetaEditorWidget.scss
 
-.sheets-container {
-  position: absolute;
-  top: 2px;
-  width: 100%;
-  height: 26px;
-  background-color: rgba(255, 255, 255, 0.3);
-  padding-top: 2px; }
-  .sheets-container > div {
-    display: table-cell;
-    vertical-align: middle;
-    white-space: nowrap; }
-  .sheets-container div.add-sheet-container {
-    border-bottom: 1px solid #ddd;
-    padding-left: 3px;
-    padding-right: 3px;
-    padding-bottom: 2px; }
-  .sheets-container div.add-sheet-container > div {
-    display: inline-block;
-    margin-right: 3px; }
-  .sheets-container div.add-sheet-container ul.dropdown-menu li a [class^="icon-"],
-  .sheets-container div.add-sheet-container ul.dropdown-menu li a [class*=" icon-"] {
-    margin-left: -17px;
-    margin-right: 3px; }
-  .sheets-container div.sheet-list-container {
-    width: 100%;
-    overflow: hidden; }
-    .sheets-container div.sheet-list-container ul.nav {
-      position: relative;
-      margin-bottom: 0px;
-      height: 24px; }
-      .sheets-container div.sheet-list-container ul.nav.nav-tabs > li {
-        display: inline-block;
-        float: none; }
-        .sheets-container div.sheet-list-container ul.nav.nav-tabs > li > a {
-          padding-top: 5px;
-          padding-bottom: 5px;
-          line-height: 13px; }
-          .sheets-container div.sheet-list-container ul.nav.nav-tabs > li > a .sheet-title {
-            white-space: nowrap;
-            display: inline-block;
-            max-width: 120px;
-            overflow: hidden;
-            text-overflow: ellipsis; }
-            .sheets-container div.sheet-list-container ul.nav.nav-tabs > li > a .sheet-title input {
-              min-width: 50px !important; }
-          .sheets-container div.sheet-list-container ul.nav.nav-tabs > li > a [class^="icon-"],
-          .sheets-container div.sheet-list-container ul.nav.nav-tabs > li > a [class*=" icon-"] {
-            margin-top: -2px;
-            margin-left: 2px;
-            cursor: pointer;
-            display: none; }
-        .sheets-container div.sheet-list-container ul.nav.nav-tabs > li.active > a [class^="icon-"],
-        .sheets-container div.sheet-list-container ul.nav.nav-tabs > li.active > a [class*=" icon-"] {
-          display: inline-block; }
-      .sheets-container div.sheet-list-container ul.nav.nav-tabs.ui-sortable li.ui-sortable-placeholder {
-        height: 0px !important; }
-      .sheets-container div.sheet-list-container ul.nav.nav-tabs.ui-sortable li.ui-sortable-helper {
-        top: 0px !important;
-        pointer-events: none; }
+5: $filterPanel-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+6: $filterPanel-header-min-width: 100px;
+7: 
+8: div.filterPanel {
+9: 	position: absolute;
+10: 	top: $sheets-container-height + $filterPanel-top;
+11: 	right: $filterPanel-right;
+12: 
+13: 	background-color: $filterPanel-background-color;
+14: 	border: $filterPanel-border;
+15: 	
 
-.read-only .sheets-container div.sheet-list-container ul.nav.nav-tabs > li.active > a [class^="icon-"],
-.read-only .sheets-container div.sheet-list-container ul.nav.nav-tabs > li.active > a [class*=" icon-"] {
-  display: none; }
+Backtrace:
+../scss/Widgets/MetaEditor/MetaEditorWidget.scss:10
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/script/variable.rb:49:in `_perform'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/script/node.rb:40:in `perform'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/script/operation.rb:74:in `_perform'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/script/node.rb:40:in `perform'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:294:in `visit_prop'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:37:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:98:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:53:in `block in visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:53:in `map'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:107:in `block in visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:119:in `with_environment'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:106:in `visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:37:in `block in visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:316:in `visit_rule'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:37:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:98:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:53:in `block in visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:53:in `map'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:107:in `block in visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:119:in `with_environment'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:106:in `visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:37:in `block in visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:126:in `visit_root'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:37:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:98:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:7:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/tree/root_node.rb:20:in `render'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/engine.rb:315:in `_render'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/engine.rb:262:in `render'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/plugin/compiler.rb:340:in `update_stylesheet'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/plugin/compiler.rb:202:in `block in update_stylesheets'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/plugin/compiler.rb:200:in `each'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/plugin/compiler.rb:200:in `update_stylesheets'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/lib/sass/plugin/compiler.rb:298:in `block in watch'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/vendor/listen/lib/listen/multi_listener.rb:86:in `call'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/vendor/listen/lib/listen/multi_listener.rb:86:in `on_change'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/vendor/listen/lib/listen/multi_listener.rb:95:in `block in initialize_adapter'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/vendor/listen/lib/listen/adapters/polling.rb:55:in `call'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/vendor/listen/lib/listen/adapters/polling.rb:55:in `poll'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.1/vendor/listen/lib/listen/adapters/polling.rb:31:in `block in start'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Syntax error: Undefined variable: \"$sheets-container-height\".\A         on line 10 of ../scss/Widgets/MetaEditor/MetaEditorWidget.scss\A \A 5: $filterPanel-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);\A 6: $filterPanel-header-min-width: 100px;\A 7: \A 8: div.filterPanel {\A 9: 	position: absolute;\A 10: 	top: $sheets-container-height + $filterPanel-top;\A 11: 	right: $filterPanel-right;\A 12: \A 13: 	background-color: $filterPanel-background-color;\A 14: 	border: $filterPanel-border;\A 15: 	"; }
