context menu on seelction

--- a/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
+++ b/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
@@ -43,6 +43,9 @@
           left: 50%;
           margin-left: -13px;
           bottom: -13px; }
+        .diagram-designer .items .selection-outline .s-btn.contextmenu {
+          bottom: -13px;
+          right: -13px; }
       .diagram-designer .items .selection-outline .rotation-deg {
         text-align: center;
         vertical-align: middle;
