--- a/client/decorators/ModelDecorator/DiagramDesigner/ModelDecorator.DiagramDesignerWidget.css
+++ b/client/decorators/ModelDecorator/DiagramDesigner/ModelDecorator.DiagramDesignerWidget.css
@@ -137,6 +137,6 @@
 .selected .model-decorator {
   border: 1px solid #52a8ec;
   background-color: #dbeafc;
-  -webkit-box-shadow: 0px 0px 7px 0px #1276d4 inset;
-  -moz-box-shadow: 0px 0px 7px 0px #1276d4 inset;
-  box-shadow: 0px 0px 7px 0px #1276d4 inset; }
+  -webkit-box-shadow: 0px 0px 15px 0px #1276d4 !important;
+  -moz-box-shadow: 0px 0px 15px 0px #1276d4 !important;
+  box-shadow: 0px 0px 15px 0px #1276d4 !important; }
