--- a/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
+++ b/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
@@ -175,6 +175,9 @@ div.css-zoom.diagram-designer-zoom {
   top: 30px;
   left: 10px; }
 
+.w-tabs div.css-zoom.diagram-designer-zoom {
+  top: 57px; }
+
 div.diagram-designer-drag-outline {
   white-space: nowrap; }
 
