selection shadow for the SVG element itself only
fix some height issues too

--- a/client/decorators/SVGDecorator/Core/_SVGDecorator.scss
+++ b/client/decorators/SVGDecorator/Core/_SVGDecorator.scss
@@ -12,10 +12,14 @@ $abstract-class-name-color: #AAAAAA;
 
 @mixin svg_decorator_core {
   .svg-decorator {
-    border: $border;
-    padding: $padding;
     text-align: center;
     position: relative;
+
+    .svg-content {
+      svg {
+        vertical-align: top;
+      }
+    }
 
     .name {
       white-space: nowrap;
