--- a/client/decorators/SVGDecorator/DiagramDesigner/SVGDecorator.DiagramDesignerWidget.css
+++ b/client/decorators/SVGDecorator/DiagramDesigner/SVGDecorator.DiagramDesignerWidget.css
@@ -4,10 +4,10 @@
  * Author: Robert Kereskenyi
  */
 .svg-decorator {
-  border: 1px solid rgba(0, 0, 0, 0);
-  padding: 0px;
   text-align: center;
   position: relative; }
+  .svg-decorator .svg-content svg {
+    vertical-align: top; }
   .svg-decorator .name {
     white-space: nowrap;
     font-size: 9px;
@@ -22,6 +22,8 @@
     font-style: italic;
     color: #aaaaaa; }
 
+.designer-item .svg-decorator .svg-content svg {
+  border: 1px solid rgba(0, 0, 0, 0); }
 .designer-item .svg-decorator .connector {
   background-color: #fefefe;
   height: 10px;
@@ -40,7 +42,7 @@
     top: -6px; }
   .designer-item .svg-decorator .connector.bottom {
     bottom: -6px; }
-.designer-item.selected .svg-decorator {
+.designer-item.selected .svg-decorator .svg-content svg {
   border: 1px solid #52a8ec;
   background-color: #dbeafc;
   -webkit-box-shadow: 0px 0px 15px 0px #1276d4 !important;
