--- a/client/decorators/SVGDecorator/Core/_SVGDecorator.scss
+++ b/client/decorators/SVGDecorator/Core/_SVGDecorator.scss
@@ -4,7 +4,7 @@ $border: 1px solid rgba(0,0,0,0);
 $padding: 0px;
 $background-color: #ECECEC;
 $box-shadow: 0px 0px 7px 0px #444 inset;
-$selected-background-color: #DBEAFC;
+$selected-background-color:  rgba(219, 234, 252, 0.2); /*#DBEAFC;*/
 $selected-box-shadow: 0px 0px 15px 0px #1276D4 !important;
 $selected-border: 1px solid #52A8EC;
 $svg-name-height: 16px;
@@ -18,6 +18,11 @@ $abstract-class-name-color: #AAAAAA;
     .svg-content {
       svg {
         vertical-align: top;
+
+        .connection-area {
+          stroke: #FF0000;
+          stroke-width: 5.5;
+        }
       }
     }
 
