--- a/client/decorators/SVGDecorator/DiagramDesigner/SVGDecorator.DiagramDesignerWidget.css
+++ b/client/decorators/SVGDecorator/DiagramDesigner/SVGDecorator.DiagramDesignerWidget.css
@@ -3,11 +3,15 @@
  * 
  * Author: Robert Kereskenyi
  */
+/*#DBEAFC;*/
 .svg-decorator {
   text-align: center;
   position: relative; }
   .svg-decorator .svg-content svg {
     vertical-align: top; }
+    .svg-decorator .svg-content svg .connection-area {
+      stroke: #FF0000;
+      stroke-width: 5.5; }
   .svg-decorator .name {
     white-space: nowrap;
     font-size: 9px;
@@ -44,7 +48,7 @@
     bottom: -6px; }
 .designer-item.selected .svg-decorator .svg-content svg {
   border: 1px solid #52a8ec;
-  background-color: #dbeafc;
+  background-color: rgba(219, 234, 252, 0.2);
   -webkit-box-shadow: 0px 0px 15px 0px #1276d4 !important;
   -moz-box-shadow: 0px 0px 15px 0px #1276d4 !important;
   box-shadow: 0px 0px 15px 0px #1276d4 !important; }
