--- a/client/decorators/SVGDecorator/PartBrowser/SVGDecorator.PartBrowserWidget.css
+++ b/client/decorators/SVGDecorator/PartBrowser/SVGDecorator.PartBrowserWidget.css
@@ -3,11 +3,15 @@
  * 
  * Author: Robert Kereskenyi
  */
+/*#DBEAFC;*/
 .part .svg-decorator {
   text-align: center;
   position: relative; }
   .part .svg-decorator .svg-content svg {
     vertical-align: top; }
+    .part .svg-decorator .svg-content svg .connection-area {
+      stroke: #FF0000;
+      stroke-width: 5.5; }
   .part .svg-decorator .name {
     white-space: nowrap;
     font-size: 9px;
