ModelDecorator can display an SVG in the middle of the box

--- a/client/decorators/ModelDecorator/Core/_ModelDecorator.scss
+++ b/client/decorators/ModelDecorator/Core/_ModelDecorator.scss
@@ -122,5 +122,10 @@ $abstract-class-name-color: #AAAAAA;
         color: $abstract-class-name-color;
       }
     }
+
+    img.embeddedsvg {
+      width: 40px;
+      position: relative;
+    }
   }
 }
