--- a/client/decorators/ModelDecorator/PartBrowser/ModelDecorator.PartBrowserWidget.css
+++ b/client/decorators/ModelDecorator/PartBrowser/ModelDecorator.PartBrowserWidget.css
@@ -105,3 +105,6 @@
   .model-decorator.abstract .name {
     font-style: italic;
     color: #aaaaaa; }
+  .model-decorator img.embeddedsvg {
+    width: 40px;
+    position: relative; }
