--- a/client/decorators/ModelDecorator/Core/_ModelDecorator.scss
+++ b/client/decorators/ModelDecorator/Core/_ModelDecorator.scss
@@ -52,6 +52,8 @@ $abstract-class-name-color: #AAAAAA;
       font-size: 10px;
       min-height: 1px;
       width: $ports-width * 2 + $ports-separator-width + $padding * 2;
+      z-index: 10;
+      position: relative;
 
       .left {
         display: inline-block;
