--- a/client/decorators/ModelDecorator/PartBrowser/ModelDecorator.PartBrowserWidget.css
+++ b/client/decorators/ModelDecorator/PartBrowser/ModelDecorator.PartBrowserWidget.css
@@ -29,7 +29,9 @@
   .model-decorator .ports {
     font-size: 10px;
     min-height: 1px;
-    width: 121px; }
+    width: 121px;
+    z-index: 10;
+    position: relative; }
     .model-decorator .ports .left {
       display: inline-block;
       vertical-align: top;
@@ -57,6 +59,11 @@
         width: 100%;
         overflow: hidden;
         text-overflow: ellipsis; }
+      .model-decorator .ports .port img.svg-icon {
+        height: 16px;
+        width: 16px;
+        position: absolute;
+        display: inline-block; }
       .model-decorator .ports .port span.dot {
         position: absolute;
         display: inline-block;
@@ -65,14 +72,20 @@
         width: 3px;
         height: 8px;
         top: 3px; }
+      .model-decorator .ports .port.w-icon span.dot {
+        display: none; }
     .model-decorator .ports .left .port .title-wrapper {
       text-align: left; }
+    .model-decorator .ports .left .port img.svg-icon {
+      left: -19px; }
     .model-decorator .ports .left .port span.dot {
       left: -8px;
       border-top-left-radius: 4px;
       border-bottom-left-radius: 4px; }
     .model-decorator .ports .right .port .title-wrapper {
       text-align: right; }
+    .model-decorator .ports .right .port img.svg-icon {
+      right: -19px; }
     .model-decorator .ports .right .port span.dot {
       left: 53px;
       border-top-right-radius: 4px;
