jquery and jquery-ui update
jquery version 2.1.0
jqueryui version 1.10.4

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,6 +1,6 @@
 @import url("bootstrap.css");
 @import url("bootstrap_webgme_ext.css");
-@import url("jquery/jquery-ui-1.10.3.custom.css");
+@import url("jquery/jquery-ui-1.10.4.css");
 @import url("jquery/jquery.layout.css");
 @import url("jquery/jquery.layout.webgme.css");
 @import url("jquery/jquery.dataTables.bootstrapped.css");
