--- a/client/decorators/ModelDecorator/DiagramDesigner/ModelDecorator.DiagramDesignerWidget.css
+++ b/client/decorators/ModelDecorator/DiagramDesigner/ModelDecorator.DiagramDesignerWidget.css
@@ -26,6 +26,10 @@
     border-bottom: 1px solid #000000;
     height: 16px;
     line-height: 16px; }
+  .model-decorator div.conn-type {
+    font-size: 9px;
+    line-height: 12px;
+    color: #aaaaaa; }
   .model-decorator .ports {
     font-size: 10px;
     min-height: 1px;
