add jquery.spectrum to the project
http://bgrins.github.io/spectrum/

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6,6 +6,7 @@
 @import url("jquery/jquery.dataTables.bootstrapped.css");
 @import url("jquery/jquery.gritter.css");
 @import url("jquery/jquery.csszoom.css");
+@import url("jquery/jquery.spectrum.css");
 
 /* OWN STYLES */
 html,body {
