--- a/client/decorators/SVGDecorator/Core/_SVGDecorator.scss
+++ b/client/decorators/SVGDecorator/Core/_SVGDecorator.scss
@@ -9,6 +9,7 @@ $selected-box-shadow: 0px 0px 15px 0px #1276D4 !important;
 $selected-border: 1px solid #52A8EC;
 $svg-name-height: 16px;
 $abstract-class-name-color: #AAAAAA;
+$port-height: 13px;
 
 @mixin svg_decorator_core {
   .svg-decorator {
@@ -42,6 +43,72 @@ $abstract-class-name-color: #AAAAAA;
       .name {
         font-style:italic;
         color: $abstract-class-name-color;
+      }
+    }
+
+    .ports {
+      position: absolute;
+      top: 0;
+      font-size: 10px;
+
+      &.ports-l {
+        left: 0px;
+      }
+
+      &.ports-r {
+        left: 100px;
+      }
+      
+      .port {
+        position: absolute;
+        height: $port-height;
+        line-height: $port-height;
+
+        .title {
+          position: absolute;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+
+        .icon {
+          position: absolute;
+
+          img {
+            width: $port-height;
+            height: $port-height;
+          }
+        }
+
+        .connector {
+          margin-left: 0;
+          margin-top: 0;
+        }
+      }
+
+      &.ports-l {
+        .port {
+          .title {
+            text-align: left;
+          }
+        }
+      }
+
+      &.ports-r {
+        .port {
+          .title {
+            text-align: right;
+          }
+
+          .icon {
+            img {
+              -webkit-transform: scaleX(-1);
+              -moz-transform: scaleX(-1);
+              -ms-transform: scaleX(-1);
+              -o-transform: scaleX(-1);
+              transform: scaleX(-1);
+            }
+          }
+        }
       }
     }
   }
