--- a/client/decorators/SVGDecorator/DiagramDesigner/SVGDecorator.DiagramDesignerWidget.css
+++ b/client/decorators/SVGDecorator/DiagramDesigner/SVGDecorator.DiagramDesignerWidget.css
@@ -25,6 +25,40 @@
   .svg-decorator.abstract .name {
     font-style: italic;
     color: #aaaaaa; }
+  .svg-decorator .ports {
+    position: absolute;
+    top: 0;
+    font-size: 10px; }
+    .svg-decorator .ports.ports-l {
+      left: 0px; }
+    .svg-decorator .ports.ports-r {
+      left: 100px; }
+    .svg-decorator .ports .port {
+      position: absolute;
+      height: 13px;
+      line-height: 13px; }
+      .svg-decorator .ports .port .title {
+        position: absolute;
+        overflow: hidden;
+        text-overflow: ellipsis; }
+      .svg-decorator .ports .port .icon {
+        position: absolute; }
+        .svg-decorator .ports .port .icon img {
+          width: 13px;
+          height: 13px; }
+      .svg-decorator .ports .port .connector {
+        margin-left: 0;
+        margin-top: 0; }
+    .svg-decorator .ports.ports-l .port .title {
+      text-align: left; }
+    .svg-decorator .ports.ports-r .port .title {
+      text-align: right; }
+    .svg-decorator .ports.ports-r .port .icon img {
+      -webkit-transform: scaleX(-1);
+      -moz-transform: scaleX(-1);
+      -ms-transform: scaleX(-1);
+      -o-transform: scaleX(-1);
+      transform: scaleX(-1); }
 
 .designer-item .svg-decorator .svg-content svg {
   border: 1px solid rgba(0, 0, 0, 0); }
