--- a/client/decorators/SVGDecorator/PartBrowser/SVGDecorator.PartBrowserWidget.css
+++ b/client/decorators/SVGDecorator/PartBrowser/SVGDecorator.PartBrowserWidget.css
@@ -25,3 +25,37 @@
   .part .svg-decorator.abstract .name {
     font-style: italic;
     color: #aaaaaa; }
+  .part .svg-decorator .ports {
+    position: absolute;
+    top: 0;
+    font-size: 10px; }
+    .part .svg-decorator .ports.ports-l {
+      left: 0px; }
+    .part .svg-decorator .ports.ports-r {
+      left: 100px; }
+    .part .svg-decorator .ports .port {
+      position: absolute;
+      height: 13px;
+      line-height: 13px; }
+      .part .svg-decorator .ports .port .title {
+        position: absolute;
+        overflow: hidden;
+        text-overflow: ellipsis; }
+      .part .svg-decorator .ports .port .icon {
+        position: absolute; }
+        .part .svg-decorator .ports .port .icon img {
+          width: 13px;
+          height: 13px; }
+      .part .svg-decorator .ports .port .connector {
+        margin-left: 0;
+        margin-top: 0; }
+    .part .svg-decorator .ports.ports-l .port .title {
+      text-align: left; }
+    .part .svg-decorator .ports.ports-r .port .title {
+      text-align: right; }
+    .part .svg-decorator .ports.ports-r .port .icon img {
+      -webkit-transform: scaleX(-1);
+      -moz-transform: scaleX(-1);
+      -ms-transform: scaleX(-1);
+      -o-transform: scaleX(-1);
+      transform: scaleX(-1); }
