mirror port image on the right side of the box

--- a/client/decorators/ModelDecorator/Core/_Port.scss
+++ b/client/decorators/ModelDecorator/Core/_Port.scss
@@ -77,6 +77,11 @@ $svg-icon-width: 5px;
 
       img.svg-icon {
         right: -$svg-icon-width - $padding;
+        -webkit-transform: scaleX(-1);
+        -moz-transform: scaleX(-1);
+        -ms-transform: scaleX(-1);
+        -o-transform: scaleX(-1);
+        transform: scaleX(-1);
       }
 
       span.dot {
