--- a/client/scss/Widgets/DiagramDesigner/DiagramDesignerWidget.scss
+++ b/client/scss/Widgets/DiagramDesigner/DiagramDesignerWidget.scss
@@ -222,6 +222,7 @@ $tabs-container-height: 26px;
         .c-name {
           position: relative;
           left: -50%;
+          cursor: default;
 
           &.v {
             left: 1px;
