--- a/client/scss/Widgets/DiagramDesigner/DiagramDesignerWidget.scss
+++ b/client/scss/Widgets/DiagramDesigner/DiagramDesignerWidget.scss
@@ -66,6 +66,7 @@ $tabs-container-height: 26px;
       border: $diagram-designer-selection-outline-border;
       position: absolute;
       pointer-events: none;
+      z-index: 100;
       -webkit-box-shadow: inset 0 1px 1px $diagram-designer-selection-outline-shadow-start 0 0 8px $diagram-designer-selection-outline-shadow-end;
       -moz-box-shadow: inset 0 1px 1px $diagram-designer-selection-outline-shadow-start, 0 0 8px $diagram-designer-selection-outline-shadow-end;
       box-shadow: inset 0 1px 1px $diagram-designer-selection-outline-shadow-start, 0 0 8px $diagram-designer-selection-outline-shadow-end;
