--- a/client/scss/Dialogs/PluginConfig/PluginConfigDialog.scss
+++ b/client/scss/Dialogs/PluginConfig/PluginConfigDialog.scss
@@ -4,4 +4,28 @@
  * Author: Robert Kereskenyi
  */
 .plugin-config-dialog {
+  .control-group {
+    .controls {
+      .widget {
+        span {
+          margin-top: 5px;
+          font-size: 14px;
+          line-height: 20px;
+          display: block;
+        }
+
+        .iCheckBox {
+          margin-top: 6px;
+        }
+
+        div.color-picker {
+          height: 30px;
+          width: 220px;
+          margin-top: 0px;
+          cursor: pointer;
+          border-radius: 4px;
+        }
+      }
+    }
+  }
 }
