plugin attribute description / minvalue / maxvalue displayed in the dialog

--- a/client/css/Dialogs/PluginConfig/PluginConfigDialog.css
+++ b/client/css/Dialogs/PluginConfig/PluginConfigDialog.css
@@ -16,3 +16,5 @@
   margin-top: 0px;
   cursor: pointer;
   border-radius: 4px; }
+.plugin-config-dialog .control-group div.desc {
+  margin-left: 180px; }
