PluginResult dialog list generated artifacts (preparation, needs real content)

--- a/client/css/Dialogs/PluginResults/PluginResultsDialog.css
+++ b/client/css/Dialogs/PluginResults/PluginResultsDialog.css
@@ -33,3 +33,11 @@
       text-transform: uppercase;
       color: #999999;
       border-bottom: 1px solid #999999; }
+  .plugin-results-dialog .modal-body div.plugin-result .artifacts {
+    margin-bottom: 5px; }
+    .plugin-results-dialog .modal-body div.plugin-result .artifacts .artifacts-title {
+      margin-top: 5px;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: #999999;
+      border-bottom: 1px solid #999999; }
