small fix to hide empty panel title from css

--- a/client/css/PanelBase/PanelBaseWithHeader.css
+++ b/client/css/PanelBase/PanelBaseWithHeader.css
@@ -9,7 +9,7 @@
   .panel-base-wh .panel-header {
     height: 0px;
     background-color: #efefef;
-    border-bottom: 3px solid rgba(0, 0, 0, 0);
+    border-bottom: 3px solid transparent;
     /*overflow: visible;
     overflow-x: hidden;*/
     white-space: nowrap;
@@ -78,6 +78,8 @@
       margin-left: 5px;
       white-space: nowrap;
       margin-top: 3px; }
+      .panel-base-wh .floating-title .panel-header-title:empty {
+        display: none; }
   .panel-base-wh.read-only .ro-icon {
     display: inline-block; }
   .panel-base-wh.read-only .panel-body {
@@ -110,7 +112,7 @@
     padding: 3px;
     height: 15px;
     background-color: whitesmoke;
-    border-bottom: 3px solid rgba(0, 0, 0, 0); }
+    border-bottom: 3px solid transparent; }
     .side-panel .panel-base-wh .panel-header .ro-icon {
       position: relative;
       top: 0px;
