small fix to make lock appear nicer in title

--- a/client/scss/PanelBase/PanelBaseWithHeader.scss
+++ b/client/scss/PanelBase/PanelBaseWithHeader.scss
@@ -132,6 +132,7 @@ $title-font-size: 14px;
       position: relative;
       top: -1px;
       left: 2px;
+      margin-right: 1.2ex
     }
 
     .panel-header-title {
