--- a/client/scss/Dialogs/PluginConfig/PluginConfigDialog.scss
+++ b/client/scss/Dialogs/PluginConfig/PluginConfigDialog.scss
@@ -25,6 +25,13 @@
           cursor: pointer;
           border-radius: 4px;
         }
+
+        div.asset-widget {
+          height: 30px;
+          line-height: 30px;
+          width: 220px;
+          margin-top: 0px;
+        }
       }
     }
 
