--- a/client/css/bootstrap_webgme_ext.css
+++ b/client/css/bootstrap_webgme_ext.css
@@ -39,10 +39,17 @@
 
 /*** MODAL extension ***/
 /* DISABLE DROP-SHADOW because it slows down scrolling :(  - especially on tablet*/
+/* ENABLE user selection*/
 .modal {
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
+
+    -moz-user-select:-moz-all;
+    -webkit-user-select:all;
+    -o-user-select:all;
+    user-select:all;
+    -ms-user-select:element;
 }
 
 
